--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
   <section id="topbar" class="d-none d-lg-block">
     <div class="container clearfix">
       <div class="contact-info float-left">
-        <i class="fa fa-envelope-o"></i> <a href="mailto:contact@example.com">contact@example.com</a>
-        <i class="fa fa-phone"></i> +1 5589 55488 55
+        <i class="fa fa-envelope-o"></i> <a href="mailto:khomeni404@gmail.com">khomeni404@gmail.com</a>
+        <i class="fa fa-phone"></i> +88 01717-659287
       </div>
       <div class="social-links float-right">
         <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
@@ -60,9 +60,9 @@
     <div class="container">
 
       <div id="logo" class="pull-left">
-        <h1><a href="index.html">Reve<span>al</span></a></h1>
+        <!--<h1><a href="index.html">Soft<span>Engine</span> Ltd.</a></h1>-->
         <!-- Uncomment below if you prefer to use an image logo -->
-        <!-- <a href="index.html"><img src="assets/img/logo.png" alt=""></a>-->
+         <a href="index.html"><img src="assets/img/logos/banner_A_small.png" width="500" height="45" alt=""></a>
       </div>
 
       <nav id="nav-menu-container">
@@ -90,7 +90,7 @@
   <section id="intro">
 
     <div class="intro-content">
-      <h2>Making <span>your ideas</span><br>happen!</h2>
+      <h2>Get <span>FREE Software</span><br>for your School/Firm/Institute</h2>
       <div>
         <a href="#about" class="btn-get-started scrollto">Get Started</a>
         <a href="#portfolio" class="btn-projects scrollto">Our Projects</a>
@@ -442,21 +442,6 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6">
-            <div class="member">
-              <div class="pic"><img src="assets/img/team-3.jpg" alt=""></div>
-              <div class="details">
-                <h4>William Anderson</h4>
-                <span>CTO</span>
-                <div class="social">
-                  <a href=""><i class="fa fa-twitter"></i></a>
-                  <a href=""><i class="fa fa-facebook"></i></a>
-                  <a href=""><i class="fa fa-google-plus"></i></a>
-                  <a href=""><i class="fa fa-linkedin"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
 
           <div class="col-lg-3 col-md-6">
             <div class="member">
@@ -473,6 +458,8 @@
               </div>
             </div>
           </div>
+
+
         </div>
 
       </div>
@@ -500,7 +487,7 @@
             <div class="contact-phone">
               <i class="ion-ios-telephone-outline"></i>
               <h3>Phone Number</h3>
-              <p><a href="tel:+155895548855">+1 5589 55488 55</a></p>
+              <p><a href="tel:+8801717659287">+88 01717-659287</a></p>
             </div>
           </div>
 
