services added (80%), favicon added

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Reveal Bootstrap Template</title>
+  <title>Soft-Engine Inc.</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/log-pointer.ico" rel="icon">
+  <link href="assets/img/log-pointer.ico" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:300,400,500,700,800|Montserrat:300,400,700" rel="stylesheet">
@@ -138,40 +138,62 @@
       <div class="container">
         <div class="section-header">
           <h2>Services</h2>
-          <p>Sed tamen tempor magna labore dolore dolor sint tempor duis magna elit veniam aliqua esse amet veniam enim export quid quid veniam aliqua eram noster malis nulla duis fugiat culpa esse aute nulla ipsum velit export irure minim illum fore</p>
+          <p class="text-justify">Day by day the range of enterprise are going wide much. And simultaneously it becomes complex to maintain such business. Here we are to get familiar with those technology which are to simplify hole enterprise system. It will save your time, money and security as well. Software system comes to ensure perfect management, save money and protect stealing. And we are committed to do so.
+
+            <br>We are committed to change business style from complexity to more and more easy way.
+
+            <br>To take long breath of entrepreneurs, To sleep well, To remove headache, To help to increase their long live on earth</p>
         </div>
 
         <div class="row">
 
           <div class="col-lg-6">
             <div class="box wow fadeInLeft">
-              <div class="icon"><i class="fa fa-bar-chart"></i></div>
-              <h4 class="title"><a href="">Lorem Ipsum</a></h4>
-              <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident etiro rabeta lingo.</p>
+              <div class="icon"><i class="fa fa-balance-scale"></i></div>
+              <h4 class="title"><a href="">Enterprise Resources Planning</a></h4>
+              <p class="description">We develop customized Enterprise Resources Planning.
+                For any kind of Corporate Business or Industry.</p>
             </div>
           </div>
 
           <div class="col-lg-6">
             <div class="box wow fadeInRight">
-              <div class="icon"><i class="fa fa-picture-o"></i></div>
-              <h4 class="title"><a href="">Dolor Sitema</a></h4>
-              <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata nodera clas.</p>
+              <div class="icon"><i class="fa fa-money"></i></div>
+              <h4 class="title"><a href="">Real Estate Business Solution</a></h4>
+              <p class="description">To manage Customer Information, Information of Flat, Plot Building etc.
+                Notification of Customer Payments/Installments.</p>
             </div>
           </div>
 
           <div class="col-lg-6">
             <div class="box wow fadeInLeft" data-wow-delay="0.2s">
-              <div class="icon"><i class="fa fa-shopping-bag"></i></div>
-              <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>
-              <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur trinige zareta lobur trade.</p>
+              <div class="icon"><i class="fa fa-sticky-note"></i></div>
+              <h4 class="title"><a href="">Attendance Maintanance</a></h4>
+              <p class="description">Garments, Hospitals etc. have complex employee duty management, like 3 schedules duty. We also provide solutions for this type of complexity.</p>
             </div>
           </div>
 
           <div class="col-lg-6">
             <div class="box wow fadeInRight" data-wow-delay="0.2s">
-              <div class="icon"><i class="fa fa-map"></i></div>
-              <h4 class="title"><a href="">Magni Dolores</a></h4>
-              <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum rideta zanox satirente madera</p>
+              <div class="icon"><i class="fa fa-address-book"></i></div>
+              <h4 class="title"><a href="">School Management</a></h4>
+              <p class="description">Student, Class, Exam, Result, Fees, Salary. etc. are the key features for a school. We provide solutions and many more things along with key features.</p>
+            </div>
+          </div>
+
+          <div class="col-lg-6">
+            <div class="box wow fadeInRight" data-wow-delay="0.2s">
+              <div class="icon"><i class="fa fa-shield"></i></div>
+              <h4 class="title"><a href="">Admin & Procurement</a></h4>
+              <p class="description" style="color: red">work in progress</p>
+            </div>
+          </div>
+
+          <div class="col-lg-6">
+            <div class="box wow fadeInRight" data-wow-delay="0.2s">
+              <div class="icon"><i class="fa fa-male"></i></div>
+              <h4 class="title"><a href="">Human Resource Management</a></h4>
+              <p class="description">Human Resource (HR) is one of the main workforces of an organization. Often it costs more resources like time, money or more human resource to manage the HR. We provide solutions that can handle HRM in an efficient way.</p>
             </div>
           </div>
 
