services done, clients done, portfolio done

--- a/index.html
+++ b/index.html
@@ -149,11 +149,14 @@
       <div class="container">
         <div class="section-header">
           <h2>Services</h2>
-          <p class="text-justify">Day by day the range of enterprise are going wide much. And simultaneously it becomes complex to maintain such business. Here we are to get familiar with those technology which are to simplify hole enterprise system. It will save your time, money and security as well. Software system comes to ensure perfect management, save money and protect stealing. And we are committed to do so.
+          <p class="text-justify">Day by day the range of enterprise is getting wide. Simultaneously it is becoming more complex to maintain such business.
+            Here we are to make you familiar with the technologies that can simplify the whole enterprise system.
+            It will save your time, money and enforce security as well.
+            Software system comes to ensure perfect management, savings and information protection
+            and we are committed to do so.
 
-            <br>We are committed to change business style from complexity to more and more easy way.
-
-            <br>To take long breath of entrepreneurs, To sleep well, To remove headache, To help to increase their long live on earth</p>
+            <br>We are committed to simplify the complex business style,
+            inspire entrepreneurship, remove headache and ensure long-term sustainability.</p>
         </div>
 
         <div class="row">
@@ -196,7 +199,7 @@
             <div class="box wow fadeInRight" data-wow-delay="0.2s">
               <div class="icon"><i class="fa fa-shield"></i></div>
               <h4 class="title"><a href="">Admin & Procurement</a></h4>
-              <p class="description" style="color: red">work in progress</p>
+              <p class="description">In a business, goods and services are often obtained on a regular basis. It can easily become a headache to keep account of all kinds of procurement. We provide softwares that can take care of the heavy bookkeeping and save resources.</p>
             </div>
           </div>
 
@@ -222,14 +225,14 @@
         </div>
 
         <div class="owl-carousel clients-carousel">
-          <img src="assets/img/clients/client-1.png" alt="">
-          <img src="assets/img/clients/client-2.png" alt="">
-          <img src="assets/img/clients/client-3.png" alt="">
-          <img src="assets/img/clients/client-4.png" alt="">
-          <img src="assets/img/clients/client-5.png" alt="">
-          <img src="assets/img/clients/client-6.png" alt="">
-          <img src="assets/img/clients/client-7.png" alt="">
-          <img src="assets/img/clients/client-8.png" alt="">
+          <img style="padding: 10px" src="assets/img/clients/qrf-logo.png" alt="">
+          <img style="padding: 10px" src="assets/img/clients/buet-ce-logo.jpg" alt="">
+          <img style="padding: 10px" src="assets/img/clients/dp-logo.jpg" alt="">
+          <img style="padding: 10px" src="assets/img/clients/pmsc.png" width="280" height="80" alt="">
+          <img style="padding: 10px" src="assets/img/clients/foura.png" alt="">
+          <!--<img style="padding: 10px" src="assets/img/clients/client-6.png" alt="">
+          <img style="padding: 10px" src="assets/img/clients/client-7.png" alt="">
+          <img style="padding: 10px" src="assets/img/clients/client-8.png" alt="">-->
         </div>
 
       </div>
@@ -240,83 +243,83 @@
       <div class="container">
         <div class="section-header">
           <h2>Our Portfolio</h2>
-          <p>Sed tamen tempor magna labore dolore dolor sint tempor duis magna elit veniam aliqua esse amet veniam enim export quid quid veniam aliqua eram noster malis nulla duis fugiat culpa esse aute nulla ipsum velit export irure minim illum fore</p>
+          <p>Soft-Engine provides varieties of software solutions customized to your needs.</p>
         </div>
 
         <div class="row">
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">App</li>
-              <li data-filter=".filter-card">Card</li>
               <li data-filter=".filter-web">Web</li>
+              <li data-filter=".filter-app">Android</li>
+              <!--<li data-filter=".filter-card">Card</li>-->
             </ul>
           </div>
         </div>
 
         <div class="row portfolio-container">
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <img src="assets/img/portfolio/bell.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>App 1</h4>
-              <p>App</p>
-              <a href="assets/img/portfolio/portfolio-1.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="App 1"><i class="bx bx-plus"></i></a>
+              <h4>IsCool Bell</h4>
+              <p>School Management</p>
+              <a href="assets/img/portfolio/bell.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Preview"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/eg-accounts.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Web 3</h4>
-              <p>Web</p>
-              <a href="assets/img/portfolio/portfolio-2.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Web 3"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>App 2</h4>
-              <p>App</p>
-              <a href="assets/img/portfolio/portfolio-3.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="App 2"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Card 2</h4>
-              <p>Card</p>
-              <a href="assets/img/portfolio/portfolio-4.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Card 2"><i class="bx bx-plus"></i></a>
+              <h4>egAccounts</h4>
+              <p>Accounting Solution</p>
+              <a href="assets/img/portfolio/details/eg-accounts.png" data-gall="portfolioGallery" class="venobox preview-link" title="Preview"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/prism.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Web 2</h4>
-              <p>Web</p>
-              <a href="assets/img/portfolio/portfolio-5.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Web 2"><i class="bx bx-plus"></i></a>
+              <h4>Prism</h4>
+              <p>Customized Accounting Software</p>
+              <a href="assets/img/portfolio/prism.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Preview"><i class="bx bx-plus"></i></a>
+              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <img src="assets/img/portfolio/e-vision.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>eVision</h4>
+              <p>Organizational Management</p>
+              <a href="assets/img/portfolio/e-vision.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Preview"><i class="bx bx-plus"></i></a>
+              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <img src="assets/img/portfolio/mirror2.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>mirror2</h4>
+              <p>HR & Financial Managemnet</p>
+              <a href="assets/img/portfolio/mirror2.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Preview"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/lenden.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>App 3</h4>
-              <p>App</p>
-              <a href="assets/img/portfolio/portfolio-6.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="App 3"><i class="bx bx-plus"></i></a>
+              <h4>Len-Den</h4>
+              <p>Financial Management</p>
+              <a href="assets/img/portfolio/lenden.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Preview"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+          <!--<div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Card 1</h4>
@@ -326,7 +329,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Card 3</h4>
@@ -344,7 +347,7 @@
               <a href="assets/img/portfolio/portfolio-9.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Web 3"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
-          </div>
+          </div>-->
 
         </div>
 
