--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Soft-Engine Inc.</title>
+  <title>Soft-Engine Ltd.</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
@@ -87,7 +87,7 @@
   </header><!-- End Header -->
 
   <!-- ======= Intro Section ======= -->
-  <section id="intro">
+  <section id="intro" style="display: none">
 
     <div class="intro-content">
       <h2>Get <span>FREE Software</span><br>for your School/Firm/Institute</h2>
@@ -114,7 +114,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-6 about-img">
-            <img src="assets/img/about-img.jpg" alt="">
+<!--            <img src="assets/img/about-img.jpg" alt="">-->
           </div>
 
           <div class="col-lg-6 content">
@@ -302,7 +302,7 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <img src="assets/img/portfolio/mirror2.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>mirror2</h4>
+              <h4>Mirror2</h4>
               <p>HR & Financial Managemnet</p>
               <a href="assets/img/portfolio/mirror2.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Preview"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
@@ -584,7 +584,11 @@
             <div class="contact-address">
               <i class="ion-ios-location-outline"></i>
               <h3>Address</h3>
-              <address>A108 Adam Street, NY 535022, USA</address>
+              <address>Address: House 6 (5th Floor) Road 11,
+                Sector 12,
+                Uttara Model Town,
+                Uttara West,
+                Dhaka 1230.</address>
             </div>
           </div>
 
@@ -600,7 +604,7 @@
             <div class="contact-email">
               <i class="ion-ios-email-outline"></i>
               <h3>Email</h3>
-              <p><a href="mailto:info@example.com">info@example.com</a></p>
+              <p><a href="mailto:info@example.com">khomeni404@gmail.com</a></p>
             </div>
           </div>
 
@@ -608,7 +612,8 @@
       </div>
 
       <div class="container mb-4">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d22864.11283411948!2d-73.96468908098944!3d40.630720240038435!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew+York%2C+NY%2C+USA!5e0!3m2!1sen!2sbg!4v1540447494452" width="100%" height="380" frameborder="0" style="border:0" allowfullscreen></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d3652.541361051052!2d90.4490805312278!3d23.728067017985023!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sbd!4v1603634210369!5m2!1sen!2sbd" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+<!--        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d22864.11283411948!2d-73.96468908098944!3d40.630720240038435!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew+York%2C+NY%2C+USA!5e0!3m2!1sen!2sbg!4v1540447494452" width="100%" height="380" frameborder="0" style="border:0" allowfullscreen></iframe>-->
       </div>
 
       <div class="container">
@@ -652,7 +657,7 @@
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong>Reveal</strong>. All Rights Reserved
+        &copy; Copyright <strong>SoftEngine</strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!--
